--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,31 +1,13 @@
 server {
     listen 80;
-    server_name clustra.tech;
-
-    location /.well-known/acme-challenge/ {
-        root /usr/share/nginx/html;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-server {
-    listen 443 ssl;
-    server_name clustra.tech;
-
-    ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/clustra.tech/privkey.pem;
-
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
+    server_name localhost;
 
     location / {
         proxy_pass http://app:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
     }
 }
