--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 user nginx;
-worker_processes 1;
+worker_processes auto;
 
-error_log /var/log/nginx/error.log warn;
+error_log /var/log/nginx/error.log notice;
 pid /var/run/nginx.pid;
 
 events {
@@ -24,5 +24,5 @@ http {
 
     gzip on;
 
-    include /etc/nginx/conf.d/*.conf; # include ไฟล์ย่อยที่มีการตั้งค่า server block
+    include /etc/nginx/conf.d/*.conf;
 }
