--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,8 @@ services:
       NEXTAUTH_URL: https://clustra.tech
       NEXTAUTH_SECRET: Z8Aqrayk+3755+fTS8sYYjZ5/ITuAPPmK9yNU3DQ9bc=
       STRIPE_SECRET_KEY: sk_test_51QRb5aH4oklz2WpCpJu337a30yF1sC9Ah7XdZIVKfSs1VS5ZcxKYKgVJRJBsixc7p2AMnoh5hLQszcA1p8qxue1l00Sxqc0Mts
-      STRIPE_WEBHOOK_SECRET: 
+      STRIPE_PUBLISHABLE_KEY: pk_test_51QRb5aH4oklz2WpCAp8FDVr15dC0m0p9nyIdYm9JFzXnZuzID4yBE0Fz37WqJGOlaNzP7n4uHNn7ttsJsdwE21Yw005CZy1QqN
+      STRIPE_WEBHOOK_SECRET: whsec_sUke6wGjxeSMLivtPQJM64KCjwkVR47g
       STRIPE_MONTHLY_PRICE_ID: price_1QT3mWH4oklz2WpCJX1NC3Yb
       STRIPE_ANNUAL_PRICE_ID: price_1QT3m4H4oklz2WpC5sGGjR8J
 
