Update Docker and Nginx configurations; add authentication support in Next.js
- Modified docker-compose.yml to include Nginx dependency and updated Certbot command for certificate management.
- Updated Nginx configuration to set the server name and handle ACME challenges for Let's Encrypt.
- Enhanced Next.js configuration to support Google authentication with a specified secret.
- Adjusted sign-in dialog to redirect users to the correct callback URL after signing in with Google.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,7 +61,10 @@ services:
     volumes:
       - certs:/etc/letsencrypt
       - certs-data:/data/letsencrypt
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+      - ./nginx/conf.d:/etc/nginx/conf.d
+    depends_on:
+      - nginx
+    command: certonly --webroot --webroot-path=/data/letsencrypt --email your-email@example.com --agree-tos --no-eff-email --staging -d your-domain.com
 
   db:
     image: postgres:13
