--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,7 +63,14 @@ services:
       - ./nginx/conf.d:/etc/nginx/conf.d
     depends_on:
       - nginx
-    command: certonly --webroot --webroot-path=/data/letsencrypt --email your-email@example.com --agree-tos --no-eff-email --staging -d your-domain.com
+    command: >
+      certonly --webroot 
+      --webroot-path=/data/letsencrypt 
+      --email paitong1550@gmail.com
+      --agree-tos 
+      --no-eff-email 
+      --staging 
+      -d clustra.tech
 
   db:
     image: postgres:13
