Add --force-renewal option to Certbot command in docker-compose.yml for automatic certificate renewal

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,7 @@ services:
       --email paitong1550@gmail.com
       --agree-tos 
       --no-eff-email 
+      --force-renewal
       --staging 
       -d clustra.tech
 
