--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name your-domain.com;
+    server_name clustra.tech;
 
     location /.well-known/acme-challenge/ {
         root /data/letsencrypt;
@@ -8,5 +8,25 @@ server {
 
     location / {
         return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name clustra.tech;
+
+    ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/clustra.tech/privkey.pem;
+
+    # ค่าความปลอดภัยเพิ่มเติม
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers off;
+
+    location / {
+        proxy_pass http://app:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
