Remove staging flag from Certbot command in docker-compose.yml and enhance Nginx configuration for Let's Encrypt verification and SSL support.
- Eliminated the --staging option to ensure production certificate issuance.
- Added try_files directive for better handling of ACME challenges.
- Updated proxy settings in the HTTPS server block for improved request handling.

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,8 +2,10 @@ server {
     listen 80;
     server_name clustra.tech;
 
+    # สำหรับ Let's Encrypt verification
     location /.well-known/acme-challenge/ {
         root /data/letsencrypt;
+        try_files $uri =404;
     }
 
     location / {
@@ -11,26 +13,21 @@ server {
     }
 }
 
+# เพิ่ม server block สำหรับ HTTPS
 server {
     listen 443 ssl;
     server_name clustra.tech;
 
+    # SSL configuration
     ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/clustra.tech/privkey.pem;
 
-    # ค่าความปลอดภัยเพิ่มเติม
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers off;
-
+    # ตั้งค่า proxy pass ไปยัง Next.js app
     location / {
         proxy_pass http://app:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $server_name;
+        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
     }
 }
