--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -8,21 +8,7 @@ server {
         try_files $uri =404;
     }
 
-    location / {
-        return 301 https://$server_name$request_uri;
-    }
-}
-
-# เพิ่ม server block สำหรับ HTTPS
-server {
-    listen 443 ssl;
-    server_name clustra.tech;
-
-    # SSL configuration
-    ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/clustra.tech/privkey.pem;
-
-    # ตั้งค่า proxy pass ไปยัง Next.js app
+    # Proxy pass ไปยัง Next.js app
     location / {
         proxy_pass http://app:3000;
         proxy_set_header Host $host;
