--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,13 +2,23 @@ server {
     listen 80;
     server_name clustra.tech;
 
-    # สำหรับ Let's Encrypt verification
     location /.well-known/acme-challenge/ {
         root /data/letsencrypt;
         try_files $uri =404;
     }
 
-    # Proxy pass ไปยัง Next.js app
+    location / {
+        return 301 https://$server_name$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name clustra.tech;
+
+    ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/clustra.tech/privkey.pem;
+
     location / {
         proxy_pass http://app:3000;
         proxy_set_header Host $host;
