Enhance SSL configuration and dependency management in Docker setup
- Added Certbot service dependency in docker-compose.yml for proper initialization.
- Created a self-signed certificate in Dockerfile.nginx for local development.
- Updated Nginx configuration to use self-signed certificates as a fallback and ensured proper SSL certificate paths are set for production.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,7 @@ services:
       - certs-data:/data/letsencrypt
     depends_on:
       - app
+      - certbot
 
   certbot:
     image: certbot/certbot
