--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -16,8 +16,12 @@ server {
     listen 443 ssl;
     server_name clustra.tech;
 
-    ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/clustra.tech/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
+
+    # ถ้าไม่มี certificate ให้ใช้ self-signed certificate ชั่วคราว
+    ssl_certificate_key /etc/nginx/ssl/default.key;
+    ssl_certificate /etc/nginx/ssl/default.crt;
 
     location / {
         proxy_pass http://app:3000;
