--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -3,6 +3,15 @@ FROM nginx:alpine
 # ลบการตั้งค่า default
 RUN rm /etc/nginx/conf.d/default.conf
 
+# คร้างโฟลเดอร์สำหรับ SSL
+RUN mkdir -p /etc/nginx/ssl
+
+# สร้าง self-signed certificate
+RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+    -keyout /etc/nginx/ssl/default.key \
+    -out /etc/nginx/ssl/default.crt \
+    -subj "/CN=localhost"
+
 # คัดลอกไฟล์การตั้งค่า nginx
 COPY nginx/nginx.conf /etc/nginx/nginx.conf
 COPY nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf
