--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,11 +51,9 @@ services:
     volumes:
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - certs:/etc/letsencrypt
-      - certs-data:/data/letsencrypt
     depends_on:
       - app
-      - certbot
+    restart: always
 
   certbot:
     image: certbot/certbot
