--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -3,27 +3,17 @@ server {
     server_name clustra.tech;
 
     location /.well-known/acme-challenge/ {
-        root /data/letsencrypt;
-        try_files $uri =404;
+        root /var/www/certbot;
     }
 
     location / {
-        return 301 https://$server_name$request_uri;
+        return 301 https://$host$request_uri;
     }
 }
 
-server {
-    listen 443 ssl;
-    server_name clustra.tech;
-
-    ssl_certificate_key /etc/letsencrypt/live/clustra.tech/privkey.pem;
-    ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
-
-    location / {
-        proxy_pass http://app:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
+# Comment out HTTPS server block for now
+#server {
+#    listen 443 ssl;
+#    server_name clustra.tech;
+#    ...
+#}
