Update Docker Compose and Nginx configurations for improved SSL setup
- Simplified Certbot command in docker-compose.yml to use the correct webroot path.
- Reintroduced the HTTPS server block in Nginx configuration with proper SSL certificate paths.
- Enhanced SSL settings with recommended protocols and ciphers for better security.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,13 +64,7 @@ services:
       - ./certbot/conf:/etc/letsencrypt
     depends_on:
       - nginx
-    command: >
-      certonly --webroot 
-      --webroot-path=/data/letsencrypt 
-      --email paitong1550@gmail.com
-      --agree-tos 
-      --no-eff-email
-      -d clustra.tech
+    command: certonly --webroot --webroot-path=/var/www/certbot -d clustra.tech
 
   db:
     image: postgres:13
