--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -11,9 +11,26 @@ server {
     }
 }
 
-# Comment out HTTPS server block for now
-#server {
-#    listen 443 ssl;
-#    server_name clustra.tech;
-#    ...
-#}
+server {
+    listen 443 ssl;
+    server_name clustra.tech;
+
+    ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/clustra.tech/privkey.pem;
+
+    # เพิ่ม SSL configuration ที่แนะนำ
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
+
+    # HSTS (uncomment if you're sure)
+    # add_header Strict-Transport-Security "max-age=63072000" always;
+
+    location / {
+        proxy_pass http://app:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
