--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -32,5 +32,14 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # เพิ่ม headers สำหรับ websocket (ถ้าใช้)
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        
+        # เพิ่ม timeout
+        proxy_read_timeout 60s;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
     }
 }
