Update Docker Compose configuration to change Prisma volume from read-write to read-only
- Modified the volume mount for Prisma in docker-compose.yml to enhance security by restricting write access.
- This change ensures that the application can only read from the Prisma directory, preventing unintended modifications.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     volumes:
       - ./src:/app/src:ro
       - ./public:/app/public:ro
-      - ./prisma:/app/prisma:rw
+      - ./prisma:/app/prisma:ro
     environment:
       DATABASE_URL: postgres://Clustra:123456@db:5432/clustra-db
       NEXT_PUBLIC_API_URL: http://localhost:3000
