Update Docker Compose configuration for Certbot command to check for existing SSL certificate
- Modified the Certbot command in docker-compose.yml to include a conditional check for the presence of the SSL certificate before attempting to obtain a new one.
- This change prevents unnecessary certificate requests and ensures smoother deployment processes.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,7 +64,10 @@ services:
       - ./certbot/conf:/etc/letsencrypt
     depends_on:
       - nginx
-    command: certonly --webroot --webroot-path=/var/www/certbot -d clustra.tech
+    command: >
+      sh -c "if [ ! -f /etc/letsencrypt/live/clustra.tech/fullchain.pem ]; then
+        certonly --webroot --webroot-path=/var/www/certbot -d clustra.tech --non-interactive --agree-tos -m your@email.com;
+      fi"
 
   db:
     image: postgres:13
