Refactor Certbot setup in Docker configuration
- Updated docker-compose.yml to replace the Certbot command with an entrypoint script for improved management of SSL certificate generation.
- Added certbot-entrypoint.sh to the container and ensured it has executable permissions in the Dockerfile.
- This change streamlines the SSL certificate handling process and enhances the overall deployment workflow.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,12 +62,10 @@ services:
     volumes:
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
+      - ./certbot-entrypoint.sh:/certbot-entrypoint.sh
     depends_on:
       - nginx
-    command: >
-      sh -c "if [ ! -f /etc/letsencrypt/live/clustra.tech/fullchain.pem ]; then
-        certonly --webroot --webroot-path=/var/www/certbot -d clustra.tech --non-interactive --agree-tos -m your@email.com;
-      fi"
+    entrypoint: ["sh", "/certbot-entrypoint.sh"]
 
   db:
     image: postgres:13
