New Docker-Compose #1

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -3,7 +3,7 @@ server {
     server_name clustra.tech;
 
     location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+        root /usr/share/nginx/html;
     }
 
     location / {
@@ -18,28 +18,14 @@ server {
     ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/clustra.tech/privkey.pem;
 
-    # เพิ่ม SSL configuration ที่แนะนำ
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-    ssl_prefer_server_ciphers off;
-
-    # HSTS (uncomment if you're sure)
-    # add_header Strict-Transport-Security "max-age=63072000" always;
+    ssl_prefer_server_ciphers on;
 
     location / {
-        proxy_pass http://app:3000;
+        proxy_pass http://web:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # เพิ่ม headers สำหรับ websocket (ถ้าใช้)
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        
-        # เพิ่ม timeout
-        proxy_read_timeout 60s;
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
     }
 }
