--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 user nginx;
-worker_processes auto;
+worker_processes 1;
 
-error_log /var/log/nginx/error.log notice;
+error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
 
 events {
@@ -24,5 +24,5 @@ http {
 
     gzip on;
 
-    include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/conf.d/*.conf; # include ไฟล์ย่อยที่มีการตั้งค่า server block
 }
