--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -7,19 +7,31 @@ server {
     }
 
     location / {
-        return 301 https://$host$request_uri;
+        proxy_pass http://web:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
+}
+
+# เพิ่มเงื่อนไขตรวจสอบไฟล์ SSL
+map $ssl_fc_exists $ssl_config {
+    default "ssl off;";
+    1 "
+        ssl on;
+        ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/clustra.tech/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+    ";
 }
 
 server {
     listen 443 ssl;
     server_name clustra.tech;
 
-    ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/clustra.tech/privkey.pem;
-
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
+    include /etc/nginx/snippets/ssl-params.conf*;
 
     location / {
         proxy_pass http://web:3000;
