Refactor Nginx configuration and update Prisma binary target
- Removed the SSL configuration block from the Nginx default.conf for clarity and future adjustments.
- Updated the Prisma schema to change the binary target from OpenSSL 1.1 to OpenSSL 3.0, ensuring compatibility with the latest security standards.
- These changes streamline the Nginx setup and enhance the Prisma client configuration.

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,10 +2,6 @@ server {
     listen 80;
     server_name clustra.tech;
 
-    location /.well-known/acme-challenge/ {
-        root /usr/share/nginx/html;
-    }
-
     location / {
         proxy_pass http://web:3000;
         proxy_set_header Host $host;
@@ -15,29 +11,9 @@ server {
     }
 }
 
-# เพิ่มเงื่อนไขตรวจสอบไฟล์ SSL
-map $ssl_fc_exists $ssl_config {
-    default "ssl off;";
-    1 "
-        ssl on;
-        ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/clustra.tech/privkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_prefer_server_ciphers on;
-    ";
-}
-
-server {
-    listen 443 ssl;
-    server_name clustra.tech;
-
-    include /etc/nginx/snippets/ssl-params.conf*;
-
-    location / {
-        proxy_pass http://web:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
+# คอมเมนต์ส่วน SSL ไว้ก่อน
+#server {
+#    listen 443 ssl;
+#    server_name clustra.tech;
+#    ...
+#}
