--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,6 +2,25 @@ server {
     listen 80;
     server_name clustra.tech;
 
+    location /.well-known/acme-challenge/ {
+        root /usr/share/nginx/html;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name clustra.tech;
+
+    ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/clustra.tech/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+
     location / {
         proxy_pass http://web:3000;
         proxy_set_header Host $host;
@@ -10,10 +29,3 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
-
-# คอมเมนต์ส่วน SSL ไว้ก่อน
-#server {
-#    listen 443 ssl;
-#    server_name clustra.tech;
-#    ...
-#}
