Refactor Nginx configuration to enhance request handling and SSL management
- Implemented conditional redirect to HTTPS in the Nginx configuration, ensuring secure connections.
- Added proxy settings for forwarding requests to the application, improving routing efficiency.
- Configured timeout settings for proxy connections to enhance performance and reliability.

These changes streamline the Nginx setup, improve security, and optimize request handling for the application.

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -7,7 +7,15 @@ server {
     }
 
     location / {
-        return 301 https://$host$request_uri;
+        if ($scheme != "https") {
+            return 301 https://$host$request_uri;
+        }
+        
+        proxy_pass http://web:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 
@@ -27,5 +35,9 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
+        proxy_read_timeout 300;
     }
 }
