--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,39 +1,31 @@
 server {
     listen 80;
-    listen [::]:80;
     server_name clustra.tech;
 
-    # ทำ redirect ทั้งหมดไปที่ HTTPS
-    return 301 https://$server_name$request_uri;
+    location /.well-known/acme-challenge/ {
+        root /usr/share/nginx/html;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
 server {
     listen 443 ssl;
-    listen [::]:443 ssl;
     server_name clustra.tech;
 
     ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/clustra.tech/privkey.pem;
 
-    # SSL configuration
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers off;
+    ssl_prefer_server_ciphers on;
 
-    # Proxy configuration
     location / {
         proxy_pass http://web:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
-        # Timeouts
-        proxy_connect_timeout 300;
-        proxy_send_timeout 300;
-        proxy_read_timeout 300;
     }
 }
