--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - DATABASE_URL=postgres://Clustra:123456@db:5432/clustra-db
       - NEXT_PUBLIC_API_URL=https://clustra.tech
       - NEXT_PUBLIC_APP_URL=https://clustra.tech
-      - NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_51QRb5aH4oklz2WpCpJu337a30yF1sC9Ah7XdZIVKfSs1VS5ZcxKYKgVJRJBsixc7p2AMnoh5hLQszcA1p8qxue1l00Sxqc0Mts
+      - NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_51QRb5aH4oklz2WpCAp8FDVr15dC0m0p9nyIdYm9JFzXnZuzID4yBE0Fz37WqJGOlaNzP7n4uHNn7ttsJsdwE21Yw005CZy1QqN
       - AWS_ACCESS_KEY_ID=AKIAWQUOZWE6B7U75K4H
       - AWS_SECRET_ACCESS_KEY=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
       - AWS_BUCKET_NAME=clustra-bucket-2
@@ -22,8 +22,8 @@ services:
       - GOOGLE_CLIENT_SECRET=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
       - NEXTAUTH_URL=https://clustra.tech
       - NEXTAUTH_SECRET=Z8Aqrayk+3755+fTS8sYYjZ5/ITuAPPmK9yNU3DQ9bc=
-      - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
-      - STRIPE_PUBLISHABLE_KEY=${STRIPE_PUBLISHABLE_KEY}
+      - STRIPE_SECRET_KEY=sk_test_51QRb5aH4oklz2WpCpJu337a30yF1sC9Ah7XdZIVKfSs1VS5ZcxKYKgVJRJBsixc7p2AMnoh5hLQszcA1p8qxue1l00Sxqc0Mts
+      - STRIPE_PUBLISHABLE_KEY=pk_test_51QRb5aH4oklz2WpCAp8FDVr15dC0m0p9nyIdYm9JFzXnZuzID4yBE0Fz37WqJGOlaNzP7n4uHNn7ttsJsdwE21Yw005CZy1QqN
       - STRIPE_WEBHOOK_SECRET=whsec_sUke6wGjxeSMLivtPQJM64KCjwkVR47g
       - STRIPE_MONTHLY_PRICE_ID=price_1QT3mWH4oklz2WpCJX1NC3Yb
       - STRIPE_ANNUAL_PRICE_ID=price_1QT3m4H4oklz2WpC5sGGjR8J
@@ -53,7 +53,7 @@ services:
     environment:
       - CF_API_EMAIL=paitong1550@gmail.com
       - CF_API_KEY=f97fefab948554e23434b12f91f706b1a39ac
-    command: certonly --dns-cloudflare --dns-cloudflare-credentials /root/.secrets/cloudflare.ini -d clustra.tech -d *.clustra.tech --email your-email@example.com --agree-tos --non-interactive
+    command: certonly --dns-cloudflare --dns-cloudflare-credentials /root/.secrets/cloudflare.ini -d clustra.tech -d *.clustra.tech --email paitong1550@gmail.com --agree-tos --non-interactive
 
   db:
     image: postgres:13
