Enhance Nginx configuration for improved SSL handling and HTTP to HTTPS redirection
- Added ACME challenge location for Let's Encrypt certificate validation.
- Implemented HTTP to HTTPS redirection for secure connections.
- Configured SSL settings with certificate paths for enhanced security.
- Streamlined server blocks for clarity and maintainability.

These changes strengthen the Nginx setup, ensuring efficient routing and secure connections.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
     environment:
       - CF_API_EMAIL=paitong1550@gmail.com
       - CF_API_KEY=f97fefab948554e23434b12f91f706b1a39ac
-    command: certonly --dns-cloudflare --dns-cloudflare-credentials /root/.secrets/cloudflare.ini -d clustra.tech -d *.clustra.tech --email paitong1550@gmail.com --agree-tos --non-interactive
+    command: certificates #certonly --dns-cloudflare --dns-cloudflare-credentials /root/.secrets/cloudflare.ini -d clustra.tech -d *.clustra.tech --email paitong1550@gmail.com --agree-tos --non-interactive
 
   db:
     image: postgres:13
