--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -3,6 +3,24 @@ server {
     listen [::]:80;
     server_name clustra.tech;
 
+    location /.well-known/acme-challenge/ {
+        root /usr/share/nginx/html;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
+    server_name clustra.tech;
+
+    ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/clustra.tech/privkey.pem;
+    
     location / {
         proxy_pass http://web:3000;
         proxy_http_version 1.1;
