Refactor Dockerfile and docker-compose.yml for improved SSL certificate management and build clarity
- Updated docker-compose.yml to enhance Certbot SSL renewal automation by adding Docker CLI installation and modifying the entrypoint script for better readability and efficiency.
- Adjusted the command to reload Nginx using Docker exec, ensuring proper service management during certificate renewal.
- Modified Dockerfile to copy all package-related files in a single command, improving clarity and reducing redundancy in the build process.

These changes streamline the deployment process and enhance the reliability of SSL certificate management.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,11 +48,21 @@ services:
       - ./nginx/certbot:/etc/letsencrypt
       - ./nginx/www:/usr/share/nginx/html
       - ./cloudflare.ini:/root/.secrets/cloudflare.ini
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - CF_API_EMAIL=paitong1550@gmail.com
       - CF_API_KEY=f97fefab948554e23434b12f91f706b1a39ac
-    command: certificates #certonly --dns-cloudflare --dns-cloudflare-credentials /root/.secrets/cloudflare.ini -d clustra.tech -d *.clustra.tech --email paitong1550@gmail.com --agree-tos --non-interactive
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --dns-cloudflare --dns-cloudflare-credentials /root/.secrets/cloudflare.ini --quiet && nginx -s reload; sleep 3d & wait $${!}; done;'"
+    command: certificates
+    entrypoint: |
+      /bin/sh -c '
+      apk add --no-cache docker-cli
+      
+      trap exit TERM
+      while :; do
+        certbot renew --dns-cloudflare --dns-cloudflare-credentials /root/.secrets/cloudflare.ini --quiet
+        docker exec $(docker ps -q -f name=nginx) nginx -s reload
+        sleep 3d & wait $${!}
+      done'
     depends_on:
       - nginx
 
