--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,7 +77,7 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U clustra-db"]
+      test: ["CMD-SHELL", "pg_isready -U clustra"]
       interval: 5s
       timeout: 5s
       retries: 5
