Enhance Docker configuration and upload route logging
- Added volume mappings in docker-compose.yml for persistent file storage of uploads and converted files.
- Updated Dockerfile to install ffmpeg as a dependency for media processing.
- Increased timeout settings in nginx.conf to improve handling of long-running requests.
- Refined error logging in the upload route to provide more detailed error information during file uploads.

These changes improve the application's media processing capabilities, enhance file management, and provide better error visibility for debugging.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ services:
 
   web:
     build: .
+    volumes:
+      - ./public/uploads:/app/public/uploads
+      - ./public/converted:/app/public/converted
     environment:
       - DATABASE_URL=postgresql://Clustra:123456@db:5432/clustra-db?schema=public
       - NEXT_PUBLIC_API_URL=https://clustra.tech
