--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,5 +24,9 @@ http {
 
     gzip on;
 
+    proxy_read_timeout 300;
+    proxy_connect_timeout 300;
+    proxy_send_timeout 300;
+
     include /etc/nginx/conf.d/*.conf; # include ไฟล์ย่อยที่มีการตั้งค่า server block
 }
