--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,10 +80,10 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U clustra"]
+      test: ["CMD-SHELL", "pg_isready -U Clustra"]
       interval: 5s
       timeout: 5s
       retries: 5
 
 volumes:
-  pgdata:
+  pgdata
