Update PostgreSQL health check command in docker-compose.yml and remove unused upload route path
- Modified the health check command to include database and host parameters for improved accuracy.
- Removed the '/api/upload' path from the middleware configuration as it is no longer needed.

These changes enhance the reliability of service health checks and streamline the middleware configuration.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,7 +80,7 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U Clustra"]
+      test: ["CMD-SHELL", "pg_isready -U Clustra -d clustra-db -h localhost"]
       interval: 5s
       timeout: 5s
       retries: 5
