--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,6 +24,7 @@ http {
 
     gzip on;
 
+    client_max_body_size 10G;
     proxy_read_timeout 300;
     proxy_connect_timeout 300;
     proxy_send_timeout 300;
