--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
 user nginx;
-worker_processes 1;
+worker_processes auto;
 
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
@@ -19,15 +19,17 @@ http {
     access_log /var/log/nginx/access.log main;
 
     sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
 
     keepalive_timeout 65;
+    client_max_body_size 0;
 
     gzip on;
 
-    client_max_body_size 10G;
     proxy_read_timeout 300;
     proxy_connect_timeout 300;
-    proxy_send_timeout 300;
+    proxy_send_timeout 0;
 
-    include /etc/nginx/conf.d/*.conf; # include ไฟล์ย่อยที่มีการตั้งค่า server block
+    include /etc/nginx/conf.d/*.conf; # Include additional server block configurations
 }
