--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,13 +23,13 @@ http {
     tcp_nodelay on;
 
     keepalive_timeout 65;
-    client_max_body_size 0;
+    client_max_body_size 5G;
 
     gzip on;
 
-    proxy_read_timeout 300;
-    proxy_connect_timeout 300;
-    proxy_send_timeout 0;
+    proxy_read_timeout 600;
+    proxy_connect_timeout 600;
+    proxy_send_timeout 600;
 
     include /etc/nginx/conf.d/*.conf; # Include additional server block configurations
 }
