Update tsconfig.json to enable output generation by setting "noEmit" to false
- Changed the "noEmit" option from true to false in tsconfig.json, allowing TypeScript to generate output files during the build process.
- This modification enhances the build functionality by ensuring that compiled files are produced, which is essential for the application to run correctly.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
-    "noEmit": true,
+    "noEmit": false,
     "module": "commonjs",
     "resolveJsonModule": true,
     "isolatedModules": true,
