Update tsconfig.json to include process-job.ts in TypeScript compilation
- Added "src/worker/process-job.ts" to the include paths in tsconfig.json, ensuring that this file is compiled during the TypeScript build process.
- This change enhances the TypeScript configuration by explicitly including the necessary worker script for proper compilation and output generation.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/server/**/*.ts"
+    "src/server/**/*.ts",
+    "src/worker/process-job.ts"
   ],
   "exclude": ["node_modules"]
 }
