Refactor Dockerfile and tsconfig.json for TypeScript compilation and cron job configuration
- Added a TypeScript compilation step for src/worker/process-job.ts in the Dockerfile, ensuring it is compiled to the dist directory with appropriate settings.
- Updated tsconfig.json to set "noEmit" to true, preventing unnecessary file emissions during the build process.
- Added DATABASE_URL environment variable to the cron job configuration in the Dockerfile, enabling proper database access for the process-job.js script.
- These changes enhance the build process and ensure the worker script is correctly compiled and configured for execution.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
-    "noEmit": false,
+    "noEmit": true,
     "module": "commonjs",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -37,7 +37,6 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "src/server/**/*.ts",
-    "src/worker/process-job.ts"
   ],
   "exclude": ["node_modules"]
 }
