Update Docker and Nginx configurations for Clustra deployment
- Modified docker-compose.yml to enable Certbot for SSL certificate management and updated volume mounts for Nginx.
- Changed Nginx server configuration to use the domain 'clustra.tech' instead of 'localhost', ensuring proper domain handling.
- Removed deprecated SSL certificate and key files, streamlining the SSL setup.
- Updated layout metadata to include relevant keywords for SEO.
- Adjusted API routes to reflect the new domain and improve security checks.
- Enhanced documentation links in the UI for better user navigation.

These changes improve the deployment setup and enhance the overall user experience on the Clustra platform.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,10 +38,10 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf  # ไฟล์หลัก nginx.conf
       - ./nginx/conf.d:/etc/nginx/conf.d          # Mount ทั้ง directory conf.d
-      # - ./nginx/certbot:/etc/letsencrypt
-      # - ./nginx/www:/usr/share/nginx/html
-      - ./nginx/ssl/localhost.crt:/etc/nginx/ssl/localhost.crt
-      - ./nginx/ssl/localhost.key:/etc/nginx/ssl/localhost.key
+      - ./nginx/certbot:/etc/letsencrypt
+      - ./nginx/www:/usr/share/nginx/html
+      # - ./nginx/ssl/localhost.crt:/etc/nginx/ssl/localhost.crt
+      # - ./nginx/ssl/localhost.key:/etc/nginx/ssl/localhost.key
     ports:
       - "80:80"
       - "443:443"
@@ -49,28 +49,28 @@ services:
       - web
     restart: always
 
-  # certbot:
-  #   image: certbot/dns-cloudflare
-  #   volumes:
-  #     - ./nginx/certbot:/etc/letsencrypt
-  #     - ./nginx/www:/usr/share/nginx/html
-  #     - ./cloudflare.ini:/root/.secrets/cloudflare.ini
-  #     - /var/run/docker.sock:/var/run/docker.sock
-  #   environment:
-  #     - CF_API_EMAIL=paitong1550@gmail.com
-  #     - CF_API_KEY=f97fefab948554e23434b12f91f706b1a39ac
-  #   command: certificates
-  #   entrypoint: |
-  #     /bin/sh -c '
-  #     apk add --no-cache docker-cli
-  #     trap exit TERM
-  #     while :; do
-  #       certbot renew --dns-cloudflare --dns-cloudflare-credentials /root/.secrets/cloudflare.ini --quiet
-  #       docker exec $(docker ps -q -f name=nginx) nginx -s reload
-  #       sleep 3d & wait $${!}
-  #     done'
-  #   depends_on:
-  #     - nginx
+  certbot:
+    image: certbot/dns-cloudflare
+    volumes:
+      - ./nginx/certbot:/etc/letsencrypt
+      - ./nginx/www:/usr/share/nginx/html
+      - ./cloudflare.ini:/root/.secrets/cloudflare.ini
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+      - CF_API_EMAIL=paitong1550@gmail.com
+      - CF_API_KEY=f97fefab948554e23434b12f91f706b1a39ac
+    command: certificates
+    entrypoint: |
+      /bin/sh -c '
+      apk add --no-cache docker-cli
+      trap exit TERM
+      while :; do
+        certbot renew --dns-cloudflare --dns-cloudflare-credentials /root/.secrets/cloudflare.ini --quiet
+        docker exec $(docker ps -q -f name=nginx) nginx -s reload
+        sleep 3d & wait $${!}
+      done'
+    depends_on:
+      - nginx
 
   db:
     image: postgres:13
