--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name localhost *.localhost;
+    server_name clustra.tech *.clustra.tech;
 
     location /.well-known/acme-challenge/ {
         root /usr/share/nginx/html;
@@ -16,13 +16,13 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
     http2 on;
-    server_name localhost *.localhost;
+    server_name clustra.tech *.clustra.tech;
 
-    # ssl_certificate /etc/letsencrypt/live/localhost/fullchain.pem;
-    # ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/localhost/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
 
-    ssl_certificate /etc/nginx/ssl/localhost.crt;
-    ssl_certificate_key /etc/nginx/ssl/localhost.key;
+    # ssl_certificate /etc/nginx/ssl/localhost.crt;
+    # ssl_certificate_key /etc/nginx/ssl/localhost.key;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
