Fix sleep command in docker-compose.yml for Certbot renewal process
- Updated the sleep command in the Certbot renewal loop to correctly reference the process ID, ensuring proper execution of the renewal script.
- This change enhances the reliability of the SSL certificate renewal process in the Docker setup.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,7 +67,7 @@ services:
       while :; do
         certbot renew --dns-cloudflare --dns-cloudflare-credentials /root/.secrets/cloudflare.ini --quiet
         docker exec $(docker ps -q -f name=nginx) nginx -s reload
-        sleep 3d & wait $${!}
+        sleep 3d & wait $$!
       done'
     depends_on:
       - nginx
