--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,12 +61,11 @@ services:
       - CF_API_KEY=f97fefab948554e23434b12f91f706b1a39ac
     command: certificates
     entrypoint: |
-      /bin/sh -c '
-      apk add --no-cache docker-cli
-      trap exit TERM
+      /bin/sh -c 'apk add --no-cache docker-cli
+      trap "exit 0" TERM
       while :; do
         certbot renew --dns-cloudflare --dns-cloudflare-credentials /root/.secrets/cloudflare.ini --quiet
-        docker exec $(docker ps -q -f name=nginx) nginx -s reload
+        docker exec $$(docker ps -q -f name=nginx) nginx -s reload
         sleep 3d & wait $$!
       done'
     depends_on:
