Update Nginx and Docker configurations for Clustra deployment
- Modified docker-compose.yml to remove commented-out SSL certificate paths, streamlining the configuration.
- Updated Nginx server configuration to use the correct SSL certificate paths for 'clustra.tech', enhancing domain handling.
- These changes improve the clarity and reliability of the SSL setup in the Docker environment.

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -18,8 +18,8 @@ server {
     http2 on;
     server_name clustra.tech *.clustra.tech;
 
-    ssl_certificate /etc/letsencrypt/live/localhost/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/clustra.tech/privkey.pem;
 
     # ssl_certificate /etc/nginx/ssl/localhost.crt;
     # ssl_certificate_key /etc/nginx/ssl/localhost.key;
