Update Nginx configuration to increase client max body size
- Set the client_max_body_size to 5120M in the default Nginx configuration file.
- This change allows for larger file uploads, enhancing the server's capability to handle bigger requests.

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -21,8 +21,7 @@ server {
     ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/clustra.tech/privkey.pem;
 
-    # ssl_certificate /etc/nginx/ssl/localhost.crt;
-    # ssl_certificate_key /etc/nginx/ssl/localhost.key;
+    client_max_body_size 5120M;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
