--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -29,6 +29,8 @@ server {
     location / {
         proxy_pass http://web:3000;
         proxy_http_version 1.1;
+        proxy_request_buffering off;
+        proxy_buffering off;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
