--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -18,8 +18,8 @@ server {
     http2 on;
     server_name clustra.tech *.clustra.tech;
 
-    ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/clustra.tech/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/clustra.tech-0001/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/clustra.tech-0001/privkey.pem;
 
     client_max_body_size 5120M;
 
