--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -18,10 +18,8 @@ server {
     http2 on;
     server_name clustra.tech *.clustra.tech;
 
-    ssl_certificate /etc/letsencrypt/live/clustra.tech-0001/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/clustra.tech-0001/privkey.pem;
-
-    client_max_body_size 5120M;
+    ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/clustra.tech/privkey.pem;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
@@ -29,8 +27,6 @@ server {
     location / {
         proxy_pass http://web:3000;
         proxy_http_version 1.1;
-        proxy_request_buffering off;
-        proxy_buffering off;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
@@ -38,5 +34,32 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
+
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
+    server_name upload.clustra.tech;
+
+    ssl_certificate /etc/letsencrypt/live/clustra.tech-0001/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/clustra.tech-0001/privkey.pem;
+
+    client_max_body_size 5120M;
+
+    # อนุญาตเฉพาะ /api/upload
+    location = /api/upload {
+        proxy_pass http://web:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # บล็อกเส้นทางอื่นทั้งหมด
+    location / {
+        return 403; # Forbidden
     }
 }
