--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -16,7 +16,7 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
     http2 on;
-    server_name clustra.tech *.clustra.tech;
+    server_name clustra.tech;
 
     ssl_certificate /etc/letsencrypt/live/clustra.tech/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/clustra.tech/privkey.pem;
