--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -60,11 +60,6 @@ server {
 
     # บล็อกเส้นทางอื่นทั้งหมด
     location / {
-        proxy_pass https://clustra.tech;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        return 301 https://clustra.tech$request_uri;
     }
 }
