--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -51,11 +51,14 @@ server {
     # อนุญาตเฉพาะ /api/upload
     location = /api/upload {
         proxy_pass http://web:3000;
-        proxy_http_version 1.1;
+       proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # บล็อกเส้นทางอื่นทั้งหมด
