--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -56,13 +56,10 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # บล็อกเส้นทางอื่นทั้งหมด
     location / {
-        return 301 https://clustra.tech$request_uri;
+        return 403;
     }
 }
