Update CORS and Nginx configurations for improved security and redirection
- Removed specific allowed origins in Next.js configuration, replacing them with a wildcard '*' for 'Access-Control-Allow-Origin' to allow all origins.
- Updated Nginx configuration to redirect all non-HTTPS traffic to the secure site, enhancing security by ensuring users are directed to the HTTPS version of the application.

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -60,6 +60,6 @@ server {
 
     # บล็อกเส้นทางอื่นทั้งหมด
     location / {
-        return 403;
+        return 301 https://clustra.tech$request_uri;
     }
 }
