Update Nginx configuration to improve security and request handling
- Changed the location block for '/api/upload' to enhance request routing.
- Updated CORS policy to return a 403 status for disallowed origins, tightening security.
- Added a new location block to redirect all other traffic to the secure site with a 301 status, ensuring users are directed to the HTTPS version of the application.

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -51,7 +51,7 @@ server {
 
     client_max_body_size 5120M;
 
-    location = / {
+    location = /api/upload {
         proxy_pass http://web:3000;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -63,7 +63,12 @@ server {
 
         # บล็อก Origin ที่ไม่ใช่ clustra.tech
         if ($http_origin !~* ^https://(clustra\.tech|upload\.clustra\.tech)$) {
-            return 301 https://clustra.tech$request_uri;
+            return 403;
         }
+    }
+
+    # บล็อกเส้นทางอื่นทั้งหมด
+    location / {
+        return 301 https://clustra.tech$request_uri;
     }
 }
