Restrict access to non-allowed origins by returning a 403 status code

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -63,7 +63,7 @@ server {
 
         # บล็อก Origin ที่ไม่ใช่ clustra.tech
         if ($http_origin !~* ^https://(clustra\.tech|upload\.clustra\.tech)$) {
-            return 301 https://clustra.tech$request_uri;
+            return 403;
         }
     }
 
