Remove wildcard from server_name in nginx configuration

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name clustra.tech *.clustra.tech;
+    server_name clustra.tech;
 
     location /.well-known/acme-challenge/ {
         root /usr/share/nginx/html;
